--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this app. a
     </noscript>
     <div id="root"></div>
 
